[gd_scene load_steps=9 format=3 uid="uid://b7voe0is0ydkr"]

[ext_resource type="Script" path="res://Unit/unit.gd" id="1_ybso1"]
[ext_resource type="PackedScene" uid="uid://cu6458xvv561i" path="res://Bullet/Bullet.tscn" id="2_yax1t"]
[ext_resource type="Texture2D" uid="uid://bh3yo0co125ns" path="res://Assets/unit_temp.png" id="3_g1lwn"]
[ext_resource type="Script" path="res://Unit/Body.gd" id="3_kjohr"]
[ext_resource type="Shader" path="res://Unit/outline.gdshader" id="4_jnwd5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_52cwb"]
resource_local_to_scene = true
shader = ExtResource("4_jnwd5")
shader_parameter/color = Vector4(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/shader_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_i2y3c"]
radius = 10.0499

[sub_resource type="CircleShape2D" id="CircleShape2D_mu6iq"]
radius = 86.0233

[node name="Unit" type="Node2D"]
script = ExtResource("1_ybso1")
bullet = ExtResource("2_yax1t")

[node name="Body" type="CharacterBody2D" parent="."]
collision_layer = 2053
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
script = ExtResource("3_kjohr")

[node name="Sprite2D" type="Sprite2D" parent="Body"]
texture_filter = 1
material = SubResource("ShaderMaterial_52cwb")
texture = ExtResource("3_g1lwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource("CircleShape2D_i2y3c")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Body"]
path_desired_distance = 30.68
target_desired_distance = 32.0
navigation_layers = 7
radius = 5.58
neighbor_distance = 16.6
max_speed = 400.0
debug_enabled = true

[node name="Timer" type="Timer" parent="Body"]
wait_time = 0.1
autostart = true

[node name="AttackArea" type="Area2D" parent="Body"]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/AttackArea"]
show_behind_parent = true
shape = SubResource("CircleShape2D_mu6iq")
debug_color = Color(0.623529, 0.54902, 0.529412, 0.419608)

[connection signal="velocity_computed" from="Body/NavigationAgent2D" to="Body" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Body/Timer" to="Body" method="_on_timer_timeout"]
[connection signal="body_entered" from="Body/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="Body/AttackArea" to="." method="_on_attack_area_body_exited"]
